# Aises-LogServer

./: .gitignore  FIELD_CHANGE.md  Makefile  README.md  check_server.py  config.yaml  main.py  pyproject.toml  quick_test.py  server.sh  test_clientid.py  test_clients.py  test_new_format.py
docs/: CLIENTID_CHANGE.md
examples/: README.md  loguru_client.py
models/: log_models.py
openspec/: project.md
openspec/changes/archive/2026-01-20-add-initial-log-server/: proposal.md  tasks.md
openspec/changes/archive/2026-01-20-add-initial-log-server/specs/log-ingestion/: spec.md
openspec/changes/archive/2026-01-20-add-initial-log-server/specs/web-display/: spec.md
openspec/specs/log-ingestion/: spec.md
openspec/specs/web-display/: spec.md
routes/: config_routes.py  log_routes.py
scripts/: check_server.py  clients_integration_test.py  diagnose_request.py  quick_test.py  test_clientid.py  test_clientid.sh  test_log_api.py  test_new_format.py  test_server.sh
services/: config_service.py  connection_manager.py  log_manager.py
static/: app.js  debug.html  debug_clientid.html  index.html  style.css  test_simple.html
tests/: test_config_api.py  test_log_api.py
utils/: __init__.py  encoding.py
